source/stylesheets/landing.css.scss
@import "vendor/bootstrap/bootstrap/variables";
@import "variables";
@import "vendor/slick";

.gitlab-promo-banner {
  padding-bottom: 3px;
  background-color: $color-primary-alt;
  font-size: 16px;
  text-align: center;
  line-height: 32px;

  > a {
    color: $color-white;
    border-bottom: 1px solid $color-white;

    &:hover {
      border-bottom-color: transparent;
      text-decoration: none;
    }
  }
}

.landing-container {

  > .container {
    position: relative;
    z-index: 9;
  }

  .landing-hero {
    margin: 10px 0 70px;

    path {
      fill: $color-secondary;
    }
  }

  .page-headline {
    margin-bottom: 0;
  }

  h2 {
    color: $blueish-gray;
    font-weight: 300;
    margin-top: 10px;
  }
}

.splash-container {
  position: relative;
  padding-bottom: 145px;

  @media (max-width: $screen-sm-max) {
    padding-bottom: 0;
  }

}

.dev-cycle {

  &.cycle-icon-row {
    position: absolute;
    padding: 20px 0 25px;
    bottom: 0;
    left: 0;
    right: 0;

    &.stuck {
      position: fixed;
      top: 50px;
      bottom: auto;
      background-image: linear-gradient($landing-community-bg 50%, rgba(0,0,0,0));
      padding-bottom: 75px;
    }

    .step {
      width: 46px;
      display: inline-block;
    }

    // Horizontally align overflowing absolutely positioned
    // step names within fixed-width containers
    .step-name-container {
      position: absolute;
      left: 50%;

      .step-name {
        position: relative;
        left: -50%;
      }
    }
  }

  svg {
    height: 46px;
    width: 46px;

    path {
      fill: $blueish-gray;
      transition: fill .2s linear;
    }
  }

  .step {
    margin: 0 20px;
    position: relative;
    color: $blueish-gray;
    transition: color .2s linear;

    .step-name {
      text-transform: uppercase;
    }


    &.active {
      color: $color-secondary;

      svg path {
        fill: $color-secondary;
      }
    }
  }

  .arrows {
    position: absolute;
    top: 15px;
    right: -22px;

    i {
      color: $color-white;
      margin-right: -3px;
    }
  }

  &.cycle-vertical {
    padding-bottom: 100px;
    background-color: $landing-community-bg;
    text-align: center;

    .step {
      display: block;
    }

    svg {
      height: 80px;
      width: 80px;

      path {
        fill: $color-secondary;
      }
    }

    .step-name {
      color: $color-secondary;
      font-size: 20px;
    }

    .description {
      font-size: 28px;
      font-weight: 300;
      color: $color-white;
    }

    .line-container {
      margin: 10px 0;

      svg {
        height: 110px;
        width: auto;
      }
    }
  }
}

.landing-community {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: $landing-community-bg;

  &::after {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background-image: linear-gradient(to bottom, rgba($landing-community-bg, .85), $landing-community-bg 85%);
  }

  .community-image {
    position: relative;
    float: left;
    width: 16.66%;
    padding-top: 16.66%;
    height: auto;
    overflow: hidden;

    @media (min-width: 768px) {
      width: 12.5%;
      padding-top: 12.5%;
    }

    @media (min-width: 990px) {
      width: 10%;
      padding-top: 10%;
    }

    @media (min-width: 1200px) {
      width: 5%;
      padding-top: 5%;
    }

    img {
      position: absolute;
      top: 0;
      right: 0;
      display: none;
    }

    .is-loaded {
      display: block;
    }
  }
}

.organizations-disclaimer {
  font-size: 12px;
}

.organizations-logo {
  margin-bottom: 10px;
  line-height: 80px;

  @media (min-width: 990px) {
    margin-bottom: 25px;
  }

  img {
    height: auto;
    max-height: 75px;
  }
}

.testimonials {
  background-color: $color-white;
  padding-bottom: 20px;
  font-weight: 300;
  border-bottom: 1px solid $landing-organization-color;

  @media (min-width: 990px) {
    padding-bottom: 50px;
  }

  @media (min-width: 1200px) {
    padding-bottom: 70px;
  }

  a:hover {
    text-decoration: none;
  }

  .testimonials-item-link {
    display: inline-block;
  }

  .testimonials-item-image {
    margin-bottom: 10px;
    height: 68px;
    width: auto;
  }

  .testimonials-item-content {
    margin-bottom: 0;
    color: $color-secondary;
    font-size: 26px;
    line-height: 1.15;
    border-left: 0;

    @media (min-width: 990px) {
      font-size: 36px;
    }
  }

  .slick-slide {
    outline: none;
  }

  .slick-dots {
    padding-left: 0;
    margin-bottom: 0;
    list-style: none;
    text-align: center;

    > li {
      display: inline-block;
      margin-left: 2px;
      margin-right: 2px;
      border-radius: 50%;
    }

    .slick-active {
      background-color: $landing-organization-color;
    }
  }

  button {
    display: block;
    width: 10px;
    height: 10px;
    padding: 0;
    border: 1px solid $landing-organization-color;
    border-radius: 50%;
    color: transparent;
    background-color: transparent;
    font-size: 0;
    line-height: 0;
    outline: none;

    &:hover {
      background-color: $landing-organization-color;
    }
  }
}

.idea-to-production {
  background-color: $color-primary-alt;
  padding: 100px 0;
  position: relative;
  z-index: 10;

  h1 {
    color: $color-white;
    font-weight: 300;
    text-align: center;
    margin: 0;
    margin-bottom: 80px;
  }

  .tools-row {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-bottom: 50px;
  }

  h3 {
    color: $color-secondary-alt;
    margin-top: 0;
  }

  .description {
    color: $color-white;
    font-size: 18px;
  }

  .image-column {
    text-align: center;

    img {
      max-height: 280px;
      width: auto;
    }

    .building-img {
      max-height: 350px;
    }
  }

  @media (max-width: $screen-sm-max) {

    .tools-row {
      display: block;
    }

    .description,
    img {
      margin-bottom: 30px;
    }
  }
}

.homepage-blog-section {
  padding-top: 70px;

  .post-item {
    text-align: center;

    h4,
    a {
      color: $color-white;
      font-weight: 300;

    }

    .no-image {
      background-image: url("/images/home/generic-blog-cover.png");
      background-size: cover;
      background-position: center center;
      background-repeat: no-repeat;
    }

    .color-bg {
      height: 200px;
      padding: 0 25px;
      margin-bottom: 30px;
      display: flex;
      align-items: center;
      justify-content: center;
    }
  }
}

